# prediqs-contract

./: .gitignore  Cargo.toml  deploy-devnet-upgradeable.interaction.json
meta/: Cargo.toml
meta/src/: main.rs
scenarios/: prediqs.scen.json
src/: prediqs.rs
tests/: prediqs_scenario_go_test.rs  prediqs_scenario_rs_test.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
